# parameter-golf

./: pyproject.toml
records/track_10min_16mb/2026-03-25_11L_DualLayerEngram_Canon2g3g/: README.md  submission.json  train_gpt.py
